fix: deploy scripts